# android_kernel_samsung_a245f

./: README_Kernel.txt  README_Platform.txt  build_kernel.sh
.github/workflows/: build.yml
Platform/: build_64bit.sh
Platform/system/bpfprogs/: Android.bp  cloBpf.c  tosMarker.c
kernel/: MODULE.bazel  kernel-6.12
kernel-5.10/KernelSU-Next/.github/: dependabot.yml
kernel-5.10/KernelSU-Next/kernel/: Kbuild  allowlist.c  allowlist.h  apk_sign.c  extras.c  feature.c  kernel_umount.c  ksu.c  ksud.c  pkg_observer.c  sucompat.c  sucompat.h  supercalls.c  supercalls.h  syscall_hook_manager.c  syscall_hook_manager.h  throne_tracker.c
kernel-5.10/drivers/: Kconfig  Makefile
kernel-5.10/drivers/input/: input.c
kernel-5.10/fs/: proc_namespace.c  stat.c
kernel-5.10/fs/proc/: fd.c
kernel-6.12/: BUILD.bazel  Makefile
kernel-6.12/arch/arm64/: Kconfig  Kconfig.debug
kernel-6.12/block/: Kconfig  bio.c  blk-mq-debugfs.c  blk-mq.c  genhd.c  ioctl.c
kernel-6.12/drivers/: Makefile
kernel-6.12/drivers/android/: binder.c  binder_alloc.c  vendor_hooks.c
kernel-6.12/drivers/base/: core.c
kernel-6.12/drivers/block/: loop.c
kernel-6.12/drivers/clk/: clk.c
kernel-6.12/drivers/hid/: hid-input.c  hid-logitech-hidpp.c  hid-quirks.c  (+3 more)
kernel-6.12/fs/: Kconfig  attr.c  dcache.c  exec.c  file_table.c  internal.h  namei.c  namespace.c  open.c  read_write.c  super.c
kernel-6.12/init/: init_task.c  main.c
kernel-6.12/kernel/: cred.c  exit.c  fork.c  kprobes.c  ptrace.c  reboot.c  signal.c  sys.c  umh.c
kernel-6.12/mm/: Kconfig  Makefile  compaction.c  filemap.c  gcma.c  gup.c  huge_memory.c  hugetlb.c  io_record.c  madvise.c  memory.c  mmap.c  page_alloc.c  process_vm_access.c  slub.c  vmalloc.c  vmscan.c
kernel-6.12/net/: Kconfig  Makefile
kernel-6.12/scripts/: Makefile.dtbs
kernel-6.12/security/: Kconfig  Makefile  security.c
kernel/kernel_device_modules-6.12/: .Kconfig.ext.lego.updated  .lego_dtbo_list  .legofile  Kbuild  Kconfig.ext  Makefile.ext  Makefile.include.ddk  build.sh  build_abi.sh  lego.bzl  lego_ddk_modules.bzl  lego_dtbo  lego_kconfig  lego_modpath  lego_module  lego_module_second
kernel/kernel_device_modules-6.12/block/: BUILD.bazel  Kconfig  Kconfig.iosched  blk-sec-common.c  blk-sec-stat-pio.c  blk-sec-stat-traffic.c  blk-sec-wb.c  ssg-cgroup.c  ssg-iosched.c  ssg-stat.c  ssg-wb.c  ssg.h
kernel/kernel_device_modules-6.12/drivers/battery/charger/hl7132_charger/: BUILD.bazel  hl7132_charger.c  hl7132_charger.h
kernel/kernel_device_modules-6.12/drivers/battery/common/: BUILD.bazel  sec_battery.c  sec_direct_charger.c
kernel/kernel_device_modules-6.12/drivers/battery/core/: BUILD.bazel
kernel/kernel_device_modules-6.12/drivers/battery/fuelgauge/sm5714_fuelgauge/: .sm5714_fuelgauge.dtsi.lego.updated  BUILD.bazel  sm5714_fuelgauge.c
kernel/kernel_device_modules-6.12/drivers/block/zram/: BUILD.bazel  Kconfig  madvise.c  zram_drv.c  zram_drv.h  zram_ext.c  zram_ext.h
kernel/kernel_device_modules-6.12/drivers/fingerprint/: BUILD.bazel  Kconfig  Makefile
kernel/kernel_device_modules-6.12/drivers/fingerprint/ec6xx/: BUILD.bazel  Kconfig  Makefile  ec6xx-spi.c
kernel/kernel_device_modules-6.12/drivers/input/input_boost/: BUILD.bazel  evdev_booster.c  input_booster.c  input_booster_mode.c  input_booster_mtk.c
kernel/kernel_device_modules-6.12/drivers/input/sec_input/: BUILD.bazel  sec_common_fn.c  sec_input.h  sec_tsp_dumpkey.c  sec_tsp_dumpkey.h  sec_tsp_log.c  sec_tsp_log.h
kernel/kernel_device_modules-6.12/drivers/knox/hdm/: BUILD.bazel  main.c
kernel/kernel_device_modules-6.12/drivers/knox/kzt/: BUILD.bazel  kzt_offset.c
kernel/kernel_device_modules-6.12/drivers/knox/ngksm/: BUILD.bazel  ngk_hypervisor_detector.c  ngk_hypervisor_detector.h
kernel/kernel_device_modules-6.12/drivers/leds/: BUILD.bazel  Kconfig  leds-mtk.c  leds-s2mf301.c  leds-sm5714-fled.c
kernel/kernel_device_modules-6.12/drivers/misc/drb/: BUILD.bazel  Kconfig
kernel/kernel_device_modules-6.12/drivers/mstdrv/: BUILD.bazel  Kconfig  mstdrv_main.c
kernel/kernel_device_modules-6.12/drivers/muic/common/: .BUILD.bazel.lego.updated  .muic_notifier.c.lego.updated  BUILD.bazel
kernel/kernel_device_modules-6.12/drivers/nfc/: BUILD.bazel  pn547.c
kernel/kernel_device_modules-6.12/drivers/samsung/: BUILD.bazel  Makefile  sec_bootstat.c
kernel/kernel_device_modules-6.12/drivers/samsung/debug/: BUILD.bazel  Kconfig  printk_ringbuffer.c  printk_ringbuffer.h  sec_debug_base.c  sec_debug_extra_info.c  sec_debug_init_log.c  sec_debug_log.c
kernel/kernel_device_modules-6.12/drivers/samsung/pm/: BUILD.bazel  sec_wakeup_cpu_allocator.c
kernel/kernel_device_modules-6.12/drivers/samsung/pm/sec_thermistor/: BUILD.bazel  sec_thermistor.c
kernel/kernel_device_modules-6.12/drivers/sec_panel_notifier_v2/: BUILD.bazel
kernel/kernel_device_modules-6.12/drivers/sensorhub/: BUILD.bazel  Kconfig  Makefile
kernel/kernel_device_modules-6.12/drivers/sensorhub/comm/: shub_iio.c
kernel/kernel_device_modules-6.12/drivers/sensorhub/debug/: shub_debug_sysfs.c  shub_dump.c
kernel/kernel_device_modules-6.12/drivers/sensorhub/sensorhub/: shub_device.c
kernel/kernel_device_modules-6.12/drivers/sensorhub/utility/: shub_utility.h
kernel/kernel_device_modules-6.12/drivers/sensors/: BUILD.bazel  Kconfig  Makefile  sx938x.c  sx938x.h  sx938x_def.h
kernel/kernel_device_modules-6.12/drivers/sti/abc/: BUILD.bazel  abc_common.c  abc_hub_core.c
kernel/kernel_device_modules-6.12/drivers/tee/tui/: BUILD.bazel  Kconfig  main.c  stui_core.c  stui_inf.c
kernel/kernel_device_modules-6.12/drivers/tee/tzdev/: BUILD.bazel  BUILD.bazel_bak
kernel/kernel_device_modules-6.12/drivers/tee/tzdev/4/core/: sysdep.c
kernel/kernel_device_modules-6.12/drivers/usb/notify/: BUILD.bazel  dock_notify.c  host_notify_class.c  usb_notifier.c  usb_notify.c  usb_notify_sysfs.c  usblog_proc_notify.c
kernel/kernel_device_modules-6.12/mm/sec_mm/: BUILD.bazel  lowfile_detect.c  sec_mm_debug.c  sec_mm_tune.c
kernel/kernel_device_modules-6.12/sound/soc/samsung/: BUILD.bazel  Kconfig  Makefile  sec_audio_sysfs.c
(+623 files in other folders)
