load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)


define_mgk_ddk_ko(
    name = "fingerprint_module_sysfs",
    srcs = [
        "fingerprint_sysfs.c",
    ],
    hdrs = [
        "fingerprint_sysfs.h",
    ],
    ko_deps = [
    ],
    copts = [
    ],
    out = "fingerprint_module_sysfs.ko",
)

