load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl", "kernel_version",)

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ddk_ko(
    name = "leds-mtk",
    srcs = [
        "leds-mtk.c",
    ],
    hdrs = [
        "leds-mtk.h",
    ],
    includes = ["."],

    ko_deps = [
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:mtk_panel_ext".format(kernel_version)
    ],
)

define_mgk_ddk_ko(
    name = "leds-mtk-pwm",
    srcs = [
        "leds-mtk-pwm.c",
    ],
    includes = ["."],

    ko_deps = [
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:mediatek-drm".format(kernel_version),
        ":leds-mtk".format(kernel_version)
    ],
)

define_mgk_ddk_ko(
    name = "leds-mtk-disp",
    srcs = [
        "leds-mtk-disp.c",
    ],

    includes = ["."],

    ko_deps = [
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:mtk_panel_ext".format(kernel_version),
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:mediatek-drm".format(kernel_version),
        ":leds-mtk".format(kernel_version)
    ],
)

define_mgk_ddk_ko(
    name = "regulator-vibrator",
    srcs = [
        "regulator-vibrator.c",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "srcs",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h",
    ]),
)

define_mgk_ddk_ko(
    name = "leds-mt6360",
    srcs = [
        "leds-mt6360.c",
    ],
    includes = ["."],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/flashlight:flashlight".format(kernel_version),
    ],
    copts = [
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/flashlight",
        "-I$(DEVICE_MODULES_PATH)/drivers/leds",
        "-I$(DEVICE_MODULES_PATH)/drivers/video/backlight",
        "-I$(srctree)/drivers/power/supply",
    ],
)

define_mgk_ddk_ko(
    name = "leds-sm5714-fled",
    srcs = [
        "leds-sm5714-fled.c",
    ],
    includes = ["."],
    header_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/imgsensor:imgsensor_kd_header".format(kernel_version),
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/mfd/sm/sm5714:mfd_sm5714".format(kernel_version),
        "//kernel_device_modules-{}/drivers/muic/sm/sm5714:muic_sm5714".format(kernel_version),
        "//kernel_device_modules-{}/drivers/battery/charger/sm5714_charger:sm5714-charger".format(kernel_version),
        "//kernel_device_modules-{}/drivers/usb/typec/sm/sm5714:sm5714_pdic".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/imgsensor/src:imgsensor_isp6s".format(kernel_version),
    ],
    copts = [
        "-I$(DEVICE_MODULES_PATH)/drivers/leds",
        #"-I$(DEVICE_MODULES_PATH)/drivers/mfd/sm/sm5714",
    ],
)

define_mgk_ddk_ko(
    name = "leds-s2mf301",
    srcs = [
        "leds-s2mf301.c",
    ],
    includes = ["."],
    header_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/imgsensor:imgsensor_kd_header".format(kernel_version),
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/mfd/slsi/s2mf301:mfd_s2mf301".format(kernel_version),
        "//kernel_device_modules-{}/drivers/battery/charger/s2mf301_charger:s2mf301-charger".format(kernel_version),
        "//kernel_device_modules-{}/drivers/muic/common:common_muic".format(kernel_version),
        "//kernel_device_modules-{}/drivers/usb/typec/slsi/common:s2m_pdic_notifier_module".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/imgsensor/src:imgsensor_isp6s".format(kernel_version),
    ],
    copts = [
        "-I$(DEVICE_MODULES_PATH)/drivers/leds",
    ],
)
