load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

define_mgk_ddk_ko(
    name = "mstdrv",
    srcs = [
        "mstdrv_main.c",
    ],
	hdrs = glob(["**/*.h"]),
	conditional_srcs = {
        "CONFIG_MST_NONSECURE":{
            True:[
                "mstdrv_transmit_nonsecure.c",
                "mstdrv_transmit_nonsecure.h",
            ],
        },
	},
    ko_deps = [
        "//kernel_device_modules-{}/drivers/tee/tzdev:tzdev".format(kernel_version),
    ],
    copts = [
        "-I$(DEVICE_MODULES_PATH)/include/",
    ],
    out = "mstdrv.ko",
)