load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)


define_mgk_ddk_ko(
    name = "nfc_nxp_sec",
    srcs = [
        "pn547.c",
    ],

    conditional_srcs = {
        "CONFIG_NFC_FEATURE_SN100U":{
            True:[
                "cold_reset.c",
            ],
        },
        "CONFIG_NFC_PN547_ESE_SUPPORT":{
            True:[
                "p61.c",
            ],
        },
        "CONFIG_SEC_NFC_LOGGER":{
            True:[
                "nfc_logger/nfc_logger.c",
            ],
        },
    },
    hdrs = glob(["**/*.h"]),
    ko_deps = [
    ],
    copts = [
        "-I$(DEVICE_MODULES_PATH)/include/",
    ],
    out = "nfc_nxp_sec.ko",
)

