load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

define_mgk_ddk_ko(
    name = "sx938x",
    srcs = [
        "sx938x.c",
    ],
    hdrs = glob(["**/*.h"]),
    ko_deps = [
        "//kernel_device_modules-{}/drivers/sensorhub:sensors_core".format(kernel_version),
		"//kernel_device_modules-{}/drivers/sensorhub:shub".format(kernel_version),
        "//kernel_device_modules-{}/drivers/usb/typec/manager:usb_typec_manager".format(kernel_version),
    ],
    copts = [
        "-I$(DEVICE_MODULES_PATH)/include/",
    ],
    out = "sx938x.ko",
)