load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl", "kernel_version")
package(
	default_visibility = [
		"//visibility:public",
	],
)

filegroup(
	name = "ddk_kconfigs",
	srcs = glob([
		"**/Kconfig",
	]),
)

define_mgk_ddk_ko(
	name = "sec_mm",
	srcs = [
		"dump_tasks.c",
		"lowfile_detect.c",
		"panic_handler.c",
		"sec_mm_debug.c",
		"sec_mm_init.c",
		"sec_mm_sysfs.c",
		"sec_mm_trace.c",
		"sec_mm_tune.c",
	],
	hdrs = glob([
		"include/*.h",
	]),
	out = "sec_mm.ko",
)
