load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)


define_mgk_ddk_ko(
    name = "fingerprint_module",
    srcs = [
        "fingerprint_common.c",
        "fingerprint_common_ap.c",
        "ec6xx-spi.c",
        "ec6xx-spi_data_transfer.c",
    ],
    hdrs = [
        "fingerprint.h",
        "fingerprint_common.h",
        "ec6xx.h",
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/fingerprint:fingerprint_module_sysfs".format(kernel_version),
    ],
    copts = [
    ],
    out = "fingerprint_module.ko",
)

