load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version")


package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)


define_mgk_ddk_ko(
    name = "input_booster_lkm",
    srcs = [
        "evdev_booster.c",
    ],

    hdrs = [
        "input_booster.h",
    ],

    conditional_srcs = {
        "CONFIG_SEC_INPUT_BOOSTER_MODE":{
            True:[
                "input_booster_mode.c",
            ],
            False:[
                "input_booster.c",
            ], 
        },
       "CONFIG_SEC_INPUT_BOOSTER_MTK":{
           True:[
               "input_booster_mtk.c",
           ],
       },
    },

    copts = [
        "-I$(DEVICE_MODULES_PATH)/include/",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/mt-plat/"
    ],
    
    ko_deps = [
        "//kernel_device_modules-{}/drivers/soc/mediatek:mtk-dvfsrc".format(kernel_version),
        "//kernel_device_modules-{}/drivers/cpufreq:cpufreq_limit".format(kernel_version)
    ],

    out = "input_booster_lkm.ko",
)
