load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

define_mgk_ddk_ko(
    name = "sec_common_fn",
    srcs = [
        "sec_input.c",
        "sec_cmd.c",
        
    ],

    hdrs = [
        "sec_cmd.h",
        "sec_input.h",
        "sec_secure_touch.h",
        "sec_tclm_v2.h",
        "sec_tsp_dumpkey.h",
        "sec_tsp_log.h",
    ],


    conditional_srcs = {
        "CONFIG_SEC_DEBUG_TSP_LOG":{
            True:[
                "sec_tsp_log.c",
            ],
        },
        "CONFIG_INPUT_TOUCHSCREEN_TCLMV2":{
            True:[
                "sec_tclm_v2.c",
            ],
        },
        "CONFIG_INPUT_SEC_SECURE_TOUCH":{
            True:[
                "sec_secure_touch.c",
            ],
        },

        "CONFIG_TOUCHSCREEN_DUMP_MODE":{
            True:[
                "sec_tsp_dumpkey.c",
            ],
        },


    },

    ko_deps = [
        "//kernel_device_modules-{}/drivers/input/sec_input:sec_input_notifier".format(kernel_version),
        "//kernel_device_modules-{}/drivers/samsung:sec_ext".format(kernel_version),
        "//kernel_device_modules-{}/drivers/usb/typec/manager:usb_typec_manager".format(kernel_version),
        "//kernel_device_modules-{}/drivers/usb/common/vbus_notifier:vbus_notifier_module".format(kernel_version),
        "//kernel_device_modules-{}/drivers/gpu/drm/samsung/panel:mcd_panel".format(kernel_version),
    ],

    copts = [
        "-I$(DEVICE_MODULES_PATH)/include/",
    ],


    out = "sec_common_fn.ko",
)

define_mgk_ddk_ko(
    name = "sec_input_notifier",
    srcs = [
        "sec_input_notifier.c",
    ],

    hdrs = [
    ],

    conditional_srcs = {
    },
    copts = [
        "-I$(DEVICE_MODULES_PATH)/include/",
    ],


    out = "sec_input_notifier.ko",
)
