load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
	name = "srcs",
	srcs = glob([
		"**/*.h",
		"**/*.c",
		"**/Makefile",
	]),
)

define_mgk_ddk_ko(
    name = "drb",
    srcs = [
        "dev_ril_bridge.c"
    ],
    hdrs = [
    ],
    ko_deps = [
    ],
    copts = [
    ],
    out = "drb.ko",
)
